objects/Natterbox_Call_Reporting_Object__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact that this call is related to (if applicable)</description>
        <inlineHelpText>The Account in Salesforce that this call is related to (if applicable)</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Natterbox Call Reporting Object</relationshipLabel>
        <relationshipName>Customer_Service_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bridge_UUID__c</fullName>
        <description>Internal Use only. The unique identifier for a bridged leg of a call.</description>
        <inlineHelpText>Internal Use only. The unique identifier for a bridged leg of a call.</inlineHelpText>
        <label>Bridge UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTI_Activity_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>With Natterbox Voice Intelligence, it maybe the case that only a subset of calls also have an activity created by the CTI. Call that have a corresponding activity will have this checkbox ticked.</inlineHelpText>
        <label>CTI Activity Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTI_Activity_Link__c</fullName>
        <inlineHelpText>If the call has an associated activity, a link to it will be in this box.</inlineHelpText>
        <label>CTI Activity Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CallConnected__c</fullName>
        <description>Indicates if the call was sucsefully connected.</description>
        <inlineHelpText>Indicates if the call was successfully connected. Will be in the form yes/no</inlineHelpText>
        <label>CallConnected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallDirection__c</fullName>
        <description>The direction, inbound or outbound, of the call.</description>
        <inlineHelpText>The direction, inbound or outbound, of the call.</inlineHelpText>
        <label>CallDirection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CallDurationSeconds__c</fullName>
        <description>Total length of the call in seconds.</description>
        <inlineHelpText>Total length of the call in seconds. This includes time the phone was ringing and any other extra connection time.</inlineHelpText>
        <label>CallDurationSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallEndDate__c</fullName>
        <description>Date and time the call ended.</description>
        <inlineHelpText>Date and time the call ended. In the format of: 2014-01-23 19:07:09</inlineHelpText>
        <label>CallEndDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallEndEpoch__c</fullName>
        <description>The time the called ended in seconds since 01-01-1970</description>
        <inlineHelpText>The time the called ended in seconds since 01-01-1970</inlineHelpText>
        <label>CallEndEpoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallHuntSeconds__c</fullName>
        <description>Total time the call was hunting in seconds.</description>
        <inlineHelpText>If the call was inbound and placed in a queue before being answered, this will be the time time the call was on hold before it was answered. If the call was outbound, this will be the same as CallRingSeconds.</inlineHelpText>
        <label>CallHuntSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallRingSeconds__c</fullName>
        <description>Total time the call was ringing in seconds.</description>
        <inlineHelpText>Total time the call was ringing in seconds before it was answered.</inlineHelpText>
        <label>CallRingSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallStartDate__c</fullName>
        <description>Date and time the call started.</description>
        <inlineHelpText>Date and time the call sarted. In the format of: 2014-01-23 19:07:09</inlineHelpText>
        <label>CallStartDate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallStartEpoch__c</fullName>
        <description>The time the call started in seconds since 01-01-1970</description>
        <inlineHelpText>The time the call started in seconds since 01-01-1970</inlineHelpText>
        <label>CallStartEpoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallTalkSeconds__c</fullName>
        <description>This is the time the user spent talking to the other party. This does not include talk time of any conversations before the call was transferred to the user.</description>
        <inlineHelpText>This is the time the user spent talking to the other party. This does not include talk time of any conversations before the call was transferred to the user.</inlineHelpText>
        <label>CallUserTalkSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallTotalTalkSeconds__c</fullName>
        <description>This is the total time the other party spent talking to your company. This includes talk time from multiple users if the call was transferred.</description>
        <inlineHelpText>This is the total time the other party spent talking to your company. This includes talk time from multiple users if the call was transferred.</inlineHelpText>
        <label>CallTotalTalkSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Start_Date_Date__c</fullName>
        <formula>DATEVALUE(

(MID(CallStartDate__c,0,4)) &amp; &quot;-&quot; &amp; (MID(CallStartDate__c,6,2)) &amp; &quot;-&quot; &amp; (MID(CallStartDate__c,9,2))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Start Date (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Start_Date_Time__c</fullName>
        <formula>DATETIMEVALUE(

(MID(CallStartDate__c,0,4)) &amp; &quot;-&quot; &amp; (MID(CallStartDate__c,6,2)) &amp; &quot;-&quot; &amp; (MID(CallStartDate__c,9,11))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Start Date (Date and Time)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CalledCountryShort__c</fullName>
        <description>The short code of the country of the number called (If known)</description>
        <inlineHelpText>The short code of the country of the number called (If known). For example: GBR for the United Kingdom.</inlineHelpText>
        <label>CalledCountryShort</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalledNumberIn__c</fullName>
        <description>This is the number that the caller dialled to enter the Natterbox service.</description>
        <inlineHelpText>This is the number that the caller dialled to enter the Natterbox service. In all but very rare occasions, this will be the same as the CalledNumber</inlineHelpText>
        <label>CalledNumberIn</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CalledNumber__c</fullName>
        <description>Phone number that was Called</description>
        <inlineHelpText>Phone number that was Called in domestic format.</inlineHelpText>
        <label>CalledNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CalledRoaming__c</fullName>
        <description>If the person being called is on a mobile phone that is roaming, this will be the short counrty code that the user is currently in.</description>
        <inlineHelpText>If the person being called is on a Natterbox mobile phone that is roaming, this will be the short country code that the user is currently in. If the call recipient is not on a Natterbox mobile, this field will be left blank.</inlineHelpText>
        <label>CalledRoaming</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerCountryShort__c</fullName>
        <description>The short country code of the caller (if known)</description>
        <inlineHelpText>The three digit short country code of the caller (if known). For example: GBR for the United Kingdom.</inlineHelpText>
        <label>CallerCountryShort</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerEmailAddress__c</fullName>
        <description>Email address of the caller.</description>
        <inlineHelpText>If the caller is a Natterbox User, this will be their email address as it appears in the Natterbox Portal. If they are an external caller, this field will be left blank. NOTE: This email address is NOT pulled from Salesforce but from the Natterbox system.</inlineHelpText>
        <label>CallerEmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CallerFirstName__c</fullName>
        <description>First Name of the Caller (If Known)</description>
        <inlineHelpText>If the caller is a Natterbox User, this will be their first name as it appears in the Natterbox Portal. If they are an external caller, this field will be left blank. NOTE: This name is NOT pulled from Salesforce but from the Natterbox system.</inlineHelpText>
        <label>CallerFirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerGroup__c</fullName>
        <description>Name of the Natterbox Group that the caller is a member of.</description>
        <inlineHelpText>If the caller is a Natterbox User, this will be their primary group as it appears in the Natterbox Portal. If they are an external caller, or have no groups assigned in the Natterbox Portal, this field will be left blank.</inlineHelpText>
        <label>CallerGroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerLastName__c</fullName>
        <description>Caller Last Name (If Known)</description>
        <inlineHelpText>If the caller is a Natterbox User, this will be their last name as it appears in the Natterbox Portal. If they are an external caller, this field will be left blank. NOTE: This name is NOT pulled from Salesforce but from the Natterbox system.</inlineHelpText>
        <label>CallerLastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerNumber__c</fullName>
        <description>Number of the Caller</description>
        <inlineHelpText>The phone number of the caller in domestic format. If the caller is a Natterbox user, this will be their 4 digit extension number rather than their external number. If you need the Natterbox user&apos;s external number, use the E164CallerNumber field instead.</inlineHelpText>
        <label>CallerNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CallerRoaming__c</fullName>
        <description>If the calling is connecting from a roaming mobile phone, this will be the short code of the country that caller is comming from (If known)</description>
        <inlineHelpText>If the caller is on a Natterbox mobile phone that is roaming, this will be the short country code that the user is currently in. If the call recipient is not on a Natterbox mobile, this field will be left blank.</inlineHelpText>
        <label>CallerRoaming</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerType__c</fullName>
        <description>Type of the Caller. Device, User or External</description>
        <inlineHelpText>The Type of caller:
User: A Natterbox User
Device: A VOIP Phone
External: Phone call from an external source.</inlineHelpText>
        <label>CallerType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallerUserAgent__c</fullName>
        <description>If the caller is using a SIP device and that SIP device is set to broadcast it hardware details.  Those details will be placed here.</description>
        <inlineHelpText>If the caller is using a SIP or VOIP device and that SIP/VOIP device is set to broadcast its hardware details. Those details will be placed here. If not, this field will be left blank.</inlineHelpText>
        <label>CallerUserAgent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_User_Full_Name__c</fullName>
        <inlineHelpText>If the caller is a Natterbox User, this will be their full name as it appears in the Natterbox Portal. If they are an external caller, this field will be left blank. NOTE: This name is NOT pulled from Salesforce but from the Natterbox system.</inlineHelpText>
        <label>Caller User Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the case that was related to the call (If applicable)</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Natterbox Call Reporting Object</relationshipLabel>
        <relationshipName>Natterbox_Call_Reporting_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConnectedEmailAddress__c</fullName>
        <description>This is the email address of the user that the call was connected to (as configured in the Natterbox portal)</description>
        <inlineHelpText>If the recipient is a Natterbox User, this will be their email address as it appears in the Natterbox Portal. If this is an external call, this field will be left blank. NOTE: This address is NOT pulled from Salesforce but from the Natterbox system.</inlineHelpText>
        <label>ConnectedEmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ConnectedFirstName__c</fullName>
        <description>This is the first name of the user that answered the call.</description>
        <inlineHelpText>If the call recipient is a Natterbox User, this will be their first name as it appears in the Natterbox Portal. If the call is outbound to an external number, this will be blank. NOTE: This name is NOT pulled from Salesforce but from the Natterbox system.</inlineHelpText>
        <label>ConnectedFirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectedGroup__c</fullName>
        <description>If the user the call is connected to is a member of a group, their group name is put here.</description>
        <inlineHelpText>If the caller is a Natterbox User, this will be their primary group as it appears in the Natterbox Portal. If this is an outbound call to an external number, or have no groups assigned in the Natterbox Portal, this field will be left blank.</inlineHelpText>
        <label>ConnectedGroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectedLastName__c</fullName>
        <description>This is the last name of the user that answered the call.</description>
        <inlineHelpText>If the call recipient is a Natterbox User, this will be their last name as it appears in the Natterbox Portal. If the call is outbound to an external number, this will be blank. NOTE: This name is NOT pulled from Salesforce but from the Natterbox system.</inlineHelpText>
        <label>ConnectedLastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectedNumber__c</fullName>
        <description>If the call was passed on to an external PSTN number, the number will be shown here.</description>
        <inlineHelpText>This will be the phone number of the person that answered the call (This may well be different to CalledNumber, depending on call dialplan routing). If the call recipient was a Natterbox user, this will show their 4 digit extension number.</inlineHelpText>
        <label>ConnectedNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ConnectedType__c</fullName>
        <description>This is the type of device that the call was answered on. The options are &apos;User, Device or External&apos;</description>
        <inlineHelpText>The Type of call recipient:
User: A Natterbox User
Device: A VOIP Phone
External: Phone number being called was external</inlineHelpText>
        <label>ConnectedType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectedUserAgent__c</fullName>
        <description>If the receiver of the call is on a SIP device, this is the details of that device.</description>
        <inlineHelpText>If the recipient of the call is using a SIP or VOIP device and that SIP/VOIP device is set to broadcast its hardware details. Those details will be placed here. If not, this field will be left blank.</inlineHelpText>
        <label>ConnectedUserAgent</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connnected_User_Full_Name__c</fullName>
        <inlineHelpText>If the call recipient is a Natterbox User, this will be their full name as it appears in the Natterbox Portal. If this is an outbound external call, this field will be left blank. NOTE This name is NOT pulled from Salesforce but from the Natterbox system.</inlineHelpText>
        <label>Connected User Full Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Month__c</fullName>
        <inlineHelpText>The day of the month that the call happened. This will return the numeric value for the day of the month.</inlineHelpText>
        <label>Day of the Month</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <inlineHelpText>The day of the week (in text, eg, Monday, Tuesday, etc) that the call took place.</inlineHelpText>
        <label>Day of the Week</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>This is the department the user belongs to in Salesforce. If the user&apos;s department is blank in Salesforce, this filed will be blank too. If Natterbox is unable to find a corresponding Salesforce user for this call, this field will be left blank.</inlineHelpText>
        <label>Department</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnostics__c</fullName>
        <inlineHelpText>Any Natterbox Relevant Diagnostic information about this call will be placed here.</inlineHelpText>
        <label>Diagnostics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DialledNumber__c</fullName>
        <description>This is the number that was called by the caller. This can be an internal or an external number.</description>
        <inlineHelpText>The actual digits tapped into the phone by the caller. For internal calls, this can also show the extension number dialed. This may be different to ConnectedNumber, depending on dialplan rules.</inlineHelpText>
        <label>DialledNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>E164CalledNumberIn__c</fullName>
        <description>This is the number that the caller called to enter the Natterbox service but in international format.</description>
        <inlineHelpText>This is the number that the caller called to enter the Natterbox service but in E164 format. This will almost always be the same as &apos;CalledNumber&apos; which should be used instead of this macro.</inlineHelpText>
        <label>E164CalledNumberIn</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>E164CalledNumber__c</fullName>
        <description>The Number that was called in International format.</description>
        <inlineHelpText>The number that was called in E164 format (E164 format will always begin with the country code of the called number, then the full number without the leading zero. For example, 07881943075 will become 447881943075).</inlineHelpText>
        <label>E164CalledNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>E164CallerNumber__c</fullName>
        <description>Number of the caller in international format.</description>
        <inlineHelpText>The number of the caller in E164 format (E164 format will always begin with the country code of the called number, then the full number without the leading zero. For example, 07881943075 will become 447881943075).</inlineHelpText>
        <label>E164CallerNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>E164ConnectedNumber__c</fullName>
        <description>If the call was passed out of the Natterbox service to a PSTN number, it is this number that was dialled - in international format.</description>
        <inlineHelpText>The number of the call recipient in E164 format. If the call is answered by a Natterbox user, this field will be left blank. For details on numbers answered by Natterbox users, use the ConnectedNumber field instead.</inlineHelpText>
        <label>E164ConnectedNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>E164DiversionNumber__c</fullName>
        <description>If the number was diverted be a previous telco and they make available the diversion information, it will be placed here.</description>
        <inlineHelpText>Prior to the call reaching Natterbox, if one of the previous telcos in the chain diverted the number, this diversion number will appear here in E146 format. If this information is not supplied by the other telcos, this field will be left blank.</inlineHelpText>
        <label>E164DiversionNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ExternalConnectedNumber__c</fullName>
        <description>If the inbound call was connected to an external PSTN number rather than a user. This number will be shown here.</description>
        <inlineHelpText>This field is no longer used and will be removed in an upcoming release.</inlineHelpText>
        <label>ExternalConnectedNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HangupCause__c</fullName>
        <description>The reason that the call finished.</description>
        <inlineHelpText>This is the reason the call was terminated. This field will be useful in showing any potential call errors.</inlineHelpText>
        <label>HangupCause</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeCountryCode__c</fullName>
        <description>The counrty code of the user that made or received the call. For example, UK would be 44.</description>
        <inlineHelpText>This is the home country code of the Natterbox user involved in the call. This is the 2 or 3 digit numeric dialling code for that country. For example, for the UK, this would be &apos;44&apos;.</inlineHelpText>
        <label>HomeCountryCode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inclusion_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inclusion Detail</label>
        <referenceTo>Inclusion_Details__c</referenceTo>
        <relationshipLabel>Natterbox Call Reporting Object</relationshipLabel>
        <relationshipName>Natterbox_Call_Reporting_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Bridge_UUID__c</fullName>
        <inlineHelpText>Internal Use Only. If multiple bridging calls are made, this is the unique identifier of the last bridged call leg.</inlineHelpText>
        <label>Last Bridge UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Bridge_to_UUID__c</fullName>
        <inlineHelpText>Internal Use Only. If a call is bridged. This is the unique identifier to the call leg that was handed on to Natterbox.</inlineHelpText>
        <label>Last Bridge to UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lead that this call is related to (if applicable)</description>
        <inlineHelpText>If Natterbox was able to find the phone number in the lead table within Saleforce, the corresponding link to that lead will be placed here.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Natterbox Call Reporting Object</relationshipLabel>
        <relationshipName>Customer_Service_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_of_the_Year__c</fullName>
        <inlineHelpText>This is the month of the year that the call took place. This is the text version of the month. For example, January, February, March, etc,</inlineHelpText>
        <label>Month of the Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NCS Application</label>
        <referenceTo>NCS_Application__c</referenceTo>
        <relationshipLabel>Natterbox Call Reporting Object</relationshipLabel>
        <relationshipName>Natterbox_Call_Reporting_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NEW_Date__c</fullName>
        <inlineHelpText>This is the hour of the day in numeric format. For example, if the call was made at 4:35pm , this will show &apos;16&apos;.</inlineHelpText>
        <label>Hour of the Day</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>If the user is using the Natterbox Voice Manager product, any notes entered into the CTI during the call will be placed here.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Not_In_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the number could not be found in Salesforce, this checkbox will be ticked.</description>
        <inlineHelpText>If Natterbox was unable to find the phone number in the Contact, Accounts or Lead tables, this checkbox will be ticked to indicate that this phone number could not be found in Salesforce.</inlineHelpText>
        <label>Number Not In Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Natterbox was able to find the phone number in the Opportunity table within Saleforce, the corresponding link to that Opportunity will be placed here.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Natterbox Call Reporting Object</relationshipLabel>
        <relationshipName>Natterbox_Call_Reporting_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_ID__c</fullName>
        <inlineHelpText>If the call was linked to another, unknown Salesforce ID, a URL link to that ID will be added here.</inlineHelpText>
        <label>Other ID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The SalesForce user that owns this call record (If applicable)</description>
        <inlineHelpText>Natterbox will attempt to link the Natterbox user to a corresponding user in Salesforce. If this link is successful, the user in Salesforce that was responsible for the call will be listed here. If no user in Salesforce could be found, this will be blank.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Service_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PG_Email__c</fullName>
        <label>PG Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Picklist_1__c</fullName>
        <inlineHelpText>If the CTI is using picklist functionality, the value of the first picklist selection can be put here. Requires Natterbox Professional Services to setup.</inlineHelpText>
        <label>Picklist 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_2__c</fullName>
        <inlineHelpText>If the CTI is using picklist functionality, the value of the second picklist selection can be put here. Requires Natterbox Professional Services to setup.</inlineHelpText>
        <label>Picklist 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PolicyStartType__c</fullName>
        <description>The type of Natterbox dialplan policy that the call went thought.</description>
        <inlineHelpText>This is the method of entry for the call into the Natterbox system
DDI: call made to a DDI number
Mobile_hook: call to or from a Natterbox mobile
Public: call to a switchboard number
ext_hook: Internal call
outbound_hook: outbound call (not Mobile)</inlineHelpText>
        <label>PolicyStartType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recording__c</fullName>
        <description>A URL link to the call recording (if one was made)</description>
        <inlineHelpText>This is the link to the audio recording on the Nattebox cloud storage system. Please note that further authentication may be required to access the recording.</inlineHelpText>
        <label>Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact that this call is related to (if applicable)</description>
        <inlineHelpText>If Natterbox was able to find the phone number in the contact table within Saleforce, the corresponding link to that contact will be placed here.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Natterbox Call Reporting Object</relationshipLabel>
        <relationshipName>Customer_Service_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signal_Bond_UUID__c</fullName>
        <inlineHelpText>Internal Use Only. The unique identifier of the signalling leg of the call.</inlineHelpText>
        <label>Signal Bond UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solid_Call_Time__c</fullName>
        <description>Time threshold in seconds for a Solid Call</description>
        <inlineHelpText>This will be the same as the CallTalkSeconds macro if the call was over the solid call threshold time. If the call was not considered a solid call, this field will be left blank.</inlineHelpText>
        <label>Solid Call Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solid_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If a solid call threshold time has been set and the call was longer than this, this checkbox will be be ticked.</inlineHelpText>
        <label>Solid Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <description>The unique identifier for the call.</description>
        <inlineHelpText>This is the unique identifier for the call supplied by Natterbox. This can be used to identify the corresponding call data on the Natterbox system.</inlineHelpText>
        <label>UUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Merchant_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not currently used.</inlineHelpText>
        <label>Unique Merchant Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wrapup_String_1__c</fullName>
        <inlineHelpText>The first Wrapup String entered by the user on the Natterbox CTI.</inlineHelpText>
        <label>Wrapup String 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wrapup_String_2__c</fullName>
        <inlineHelpText>The second Wrapup String entered by the user on the Natterbox CTI.</inlineHelpText>
        <label>Wrapup String 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Natterbox Call Reporting Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Wrapup_String_1__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
</CustomObject>